--- a/index.html
+++ b/index.html
@@ -6,26 +6,15 @@
   <meta name="description" content="A checklist for Elden Ring to acquire all items, weapons, armor and spells, complete all side quests, explore every dungeon and defeat every boss and mini boss.">
   <meta name="author" content="SunMar">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css" integrity="sha384-eoTu3+HydHRBIjnCVwsFyCpUDZHZSFKEJD0mc3ZqSBSb6YhZzRHeiomAUWCstIWo" crossorigin="anonymous">
   <link href="styles.css" rel="stylesheet">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha384-tc3TMXCcTCib89yECEQXI4e6DhhlwNrqzYpvyeSqBD2vB/KugQH7o3p+/UtKuS5L" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="store2.min.js?v=2.14.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/store2@2.13.2/dist/store2.min.js" integrity="sha256-JPFR/7zINXqP7QDM/zA7iRDK7PYFNUTAnJULaGEHK8Q=" crossorigin="anonymous"></script>
   <script src="javascript.js"></script>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-        <ul class="navbar-nav mx-auto">
-        </ul>
-      </div>
-    </div>
-  </nav>
-
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -33,8 +22,32 @@
         <p class="lead">Contribute to the checklist at the <a href="https://github.com/SunMar/elden-ring-cheat-sheet">GitHub Repository</a>.</p>
       </div>
     </div>
+    <div class="row">
+      <div class="col-12 text-center">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#resetChecklistModal">Reset checklist</button>
+      </div>
+    </div>
 
-    <div id="checklist" class="accordion"></div>
+    <div class="modal fade" id="resetChecklistModal" tabindex="-1" aria-labelledby="resetChecklistModalHeader" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="resetChecklistModalHeader">Reset checklist</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            If you reset the checklist all checked items are cleared, and all progress is lost.
+            Useful for example if you start a New Game. Are you sure you want to reset the checklist?
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" id="resetChecklist">Reset checklist</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="checklist" class="accordion m-3"></div>
   </div>
 </body>
 </html>
