--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="col-12 text-center">
         <h1>Elden Ring Cheat Sheet</h1>
         <p class="lead">Contribute to the checklist at the <a href="https://github.com/SunMar/elden-ring-cheat-sheet">GitHub Repository</a>.</p>
+        <p>Check out <a href="https://www.youtube.com/c/JamesGuides7">Jame's Guides</a> and the <a href="https://www.youtube.com/watch?v=9Kn75xtLPDY&list=PLtT13aAeylwEZDq9eCBP8-KwLHNFIzXFA" target="_blank">Elden Ring 100% Walkthrough</a> on which this checklist is based.</p>
       </div>
     </div>
     <div class="row">
